--- a/ux/public/flux/index.html
+++ b/ux/public/flux/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app" />
-    <script src = "build/flux/bundle.js" type="text/javascript"></script>
+    <script src = "../build/flux/bundle.js" type="text/javascript"></script>
   </body>
 </html>
